{
  "version": 4,
  "terraform_version": "1.2.1",
  "serial": 30,
  "lineage": "9f9665b1-83f3-6ede-bb58-c096e54ba4a9",
  "resources": [
    {
      "module": "module.private_ethereum",
      "mode": "managed",
      "type": "aws_lb",
      "name": "nlb_ethereum",
      "provider": "module.private_ethereum.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:136993672349:loadbalancer/net/nlb-ethereum-network-devel/b2aa7a9822d3644c",
            "arn_suffix": "net/nlb-ethereum-network-devel/b2aa7a9822d3644c",
            "dns_name": "nlb-ethereum-network-devel-b2aa7a9822d3644c.elb.ap-southeast-1.amazonaws.com",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:136993672349:loadbalancer/net/nlb-ethereum-network-devel/b2aa7a9822d3644c",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "nlb-ethereum-network-devel",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01800971c4347c305"
              },
              {
                "subnet_id": "subnet-06f45a0fc6b71b603"
              },
              {
                "subnet_id": "subnet-0b06c8d07e3fafa4f"
              }
            ],
            "subnets": [
              "subnet-01800971c4347c305",
              "subnet-06f45a0fc6b71b603",
              "subnet-0b06c8d07e3fafa4f"
            ],
            "vpc_id": "vpc-034c069f93d746d3a",
            "zone_id": "ZKVM4W9LS7TM"
          }
        }
      ]
    },
    {
      "module": "module.private_ethereum",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nlb_listener_ethereum_explorer",
      "provider": "module.private_ethereum.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:136993672349:listener/net/nlb-ethereum-network-devel/b2aa7a9822d3644c/746f6fb4ec387398",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:136993672349:targetgroup/explorer-ethereum-network-devel/f256ad4bfa194b8f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:136993672349:listener/net/nlb-ethereum-network-devel/b2aa7a9822d3644c/746f6fb4ec387398",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:136993672349:loadbalancer/net/nlb-ethereum-network-devel/b2aa7a9822d3644c",
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_ethereum.aws_lb.nlb_ethereum",
            "module.private_ethereum.aws_lb_target_group.nlb_tg_ethereum_explorer"
          ]
        }
      ]
    },
    {
      "module": "module.private_ethereum",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nlb_listener_ethstats",
      "provider": "module.private_ethereum.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:136993672349:listener/net/nlb-ethereum-network-devel/b2aa7a9822d3644c/ae3d332ad6870c49",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:136993672349:targetgroup/ethstats-ethereum-network-devel/02637477ed68c8e4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:136993672349:listener/net/nlb-ethereum-network-devel/b2aa7a9822d3644c/ae3d332ad6870c49",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:136993672349:loadbalancer/net/nlb-ethereum-network-devel/b2aa7a9822d3644c",
            "port": 3000,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_ethereum.aws_lb.nlb_ethereum",
            "module.private_ethereum.aws_lb_target_group.nlb_tg_ethstats"
          ]
        }
      ]
    },
    {
      "module": "module.private_ethereum",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nlb_listener_go_ethereum",
      "provider": "module.private_ethereum.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:136993672349:listener/net/nlb-ethereum-network-devel/b2aa7a9822d3644c/95bbcd9db4eacf59",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:136993672349:targetgroup/ethereum-network-devel/ed9a04758385238b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:136993672349:listener/net/nlb-ethereum-network-devel/b2aa7a9822d3644c/95bbcd9db4eacf59",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:136993672349:loadbalancer/net/nlb-ethereum-network-devel/b2aa7a9822d3644c",
            "port": 22000,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_ethereum.aws_lb.nlb_ethereum",
            "module.private_ethereum.aws_lb_target_group.nlb_tg_go_ethereum"
          ]
        }
      ]
    },
    {
      "module": "module.private_ethereum",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nlb_tg_ethereum_explorer",
      "provider": "module.private_ethereum.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:136993672349:targetgroup/explorer-ethereum-network-devel/f256ad4bfa194b8f",
            "arn_suffix": "targetgroup/explorer-ethereum-network-devel/f256ad4bfa194b8f",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:136993672349:targetgroup/explorer-ethereum-network-devel/f256ad4bfa194b8f",
            "lambda_multi_value_headers_enabled": false,
            "name": "explorer-ethereum-network-devel",
            "port": 80,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-034c069f93d746d3a"
          }
        }
      ]
    },
    {
      "module": "module.private_ethereum",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nlb_tg_ethstats",
      "provider": "module.private_ethereum.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:136993672349:targetgroup/ethstats-ethereum-network-devel/02637477ed68c8e4",
            "arn_suffix": "targetgroup/ethstats-ethereum-network-devel/02637477ed68c8e4",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:136993672349:targetgroup/ethstats-ethereum-network-devel/02637477ed68c8e4",
            "lambda_multi_value_headers_enabled": false,
            "name": "ethstats-ethereum-network-devel",
            "port": 3000,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-034c069f93d746d3a"
          }
        }
      ]
    },
    {
      "module": "module.private_ethereum",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nlb_tg_go_ethereum",
      "provider": "module.private_ethereum.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:136993672349:targetgroup/ethereum-network-devel/ed9a04758385238b",
            "arn_suffix": "targetgroup/ethereum-network-devel/ed9a04758385238b",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:136993672349:targetgroup/ethereum-network-devel/ed9a04758385238b",
            "lambda_multi_value_headers_enabled": false,
            "name": "ethereum-network-devel",
            "port": 22000,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-034c069f93d746d3a"
          }
        }
      ]
    },
    {
      "module": "module.private_ethereum",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ethereum_exlorer",
      "provider": "module.private_ethereum.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:136993672349:security-group/sg-0f6e5adade7686f17",
            "description": "Security group used in Ethereum network devel",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f6e5adade7686f17",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Ethereum Lite Explorer",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "go-ethereum-sg-explorer-devel",
            "name_prefix": "",
            "owner_id": "136993672349",
            "revoke_rules_on_delete": false,
            "tags": {
              "EthereumNetworkName": "devel",
              "Name": "ethereum-sg-devel"
            },
            "tags_all": {
              "EthereumNetworkName": "devel",
              "Name": "ethereum-sg-devel"
            },
            "timeouts": null,
            "vpc_id": "vpc-034c069f93d746d3a"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.private_ethereum",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ethstats",
      "provider": "module.private_ethereum.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:136993672349:security-group/sg-0adc3003e6295a23d",
            "description": "Security group used in Ethereum network devel",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0adc3003e6295a23d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Ethereum ethstats",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "go-ethereum-sg-ethstats-devel",
            "name_prefix": "",
            "owner_id": "136993672349",
            "revoke_rules_on_delete": false,
            "tags": {
              "EthereumNetworkName": "devel",
              "Name": "ethereum-sg-devel"
            },
            "tags_all": {
              "EthereumNetworkName": "devel",
              "Name": "ethereum-sg-devel"
            },
            "timeouts": null,
            "vpc_id": "vpc-034c069f93d746d3a"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.private_ethereum",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "go_ethereum",
      "provider": "module.private_ethereum.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:136993672349:security-group/sg-095b157bea4d4c1c7",
            "description": "Security group used in Ethereum network devel",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow traffic for geth",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-095b157bea4d4c1c7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow traffic for geth p2p and rpc",
                "from_port": 21000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22000
              }
            ],
            "name": "go-ethereum-sg-devel",
            "name_prefix": "",
            "owner_id": "136993672349",
            "revoke_rules_on_delete": false,
            "tags": {
              "EthereumNetworkName": "devel",
              "Name": "ethereum-sg-devel"
            },
            "tags_all": {
              "EthereumNetworkName": "devel",
              "Name": "ethereum-sg-devel"
            },
            "timeouts": null,
            "vpc_id": "vpc-034c069f93d746d3a"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}